--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
         }
     ],
     "require": {
-        "php" : "~7.1",
-        "guzzlehttp/guzzle": "~6.0"
+        "php" : "^7.3",
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "^7.0.1"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=7.0",
@@ -42,7 +43,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.1-dev"
         }
     },
     "config": {
